force-app/main/default/objects/CARE_Income_Sources__c/CARE_Income_Sources__c.object-meta.xml
<CustomObject>
    <description>PEV income sources</description>
    <label>CARE Income Sources</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE Income Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>