force-app/main/default/objects/CARE_Income_Sources__c/fields/Source_No__c.field-meta.xml
<CustomField>
    <fullName>Source_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source No</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>