force-app/main/default/objects/CARE_Income_Sources__c/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>START DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>